<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:orientation="vertical"
    tools:context=".Activities.InsertNotesActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/notesTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:autofillHints=""
            android:background="@drawable/edit_text_bg"
            android:fontFamily="@font/opensans"
            android:hint="@string/title"
            android:inputType="text"
            android:padding="15dp" />

        <EditText
            android:id="@+id/notesSubTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/edit_text_bg"
            android:fontFamily="@font/opensans"
            android:hint="@string/sub_title"
            android:inputType="text"
            android:padding="15dp"
            tools:ignore="Autofill" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:fontFamily="@font/opensans"
                android:text="@string/priority"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/redPriority"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_margin="10dp"
                android:background="@drawable/red_shape"
                android:contentDescription="@string/aboutImage" />

            <ImageView
                android:id="@+id/greenPriority"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_margin="10dp"
                android:background="@drawable/green_shape"
                android:contentDescription="@string/aboutImage" />

            <ImageView
                android:id="@+id/yellowPriority"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_margin="10dp"
                android:background="@drawable/yellow"
                android:contentDescription="@string/aboutImage" />

        </LinearLayout>

        <EditText
            android:id="@+id/notesData"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/edit_text_bg"
            android:fontFamily="@font/opensans"
            android:gravity="start"
            android:hint="@string/notes"
            android:inputType="textMultiLine"
            android:padding="15dp"
            tools:ignore="Autofill" />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/doneNotesBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="26dp"
        android:backgroundTint="@color/red"
        android:contentDescription="@string/aboutImage"
        android:src="@drawable/ic_baseline_done_24"
        tools:ignore="UnusedAttribute" />

</RelativeLayout>